# CMake_Kconfig_Example

./: .config  .config.old  CMakeLists.txt  Debug.config  Kconfig  README.md  autoconf.h  build.sh  kconfig.cmake  kconfig.h  kconfigLog.txt
application/: prj.conf
application/config/Source/: apm32f4xx_gpio_cfg.c
application/source/: main.c
cmake/: source-include.cmake
driver/: Kconfig  driver.cmake  led.c  led.h
driver/motor/: motor.c  motor.h
module/: Kconfig  module.cmake
module/Flash/: Flash.cpp  Flash.hpp
module/NewModule/: Kconfig  NewModule.cmake  NewModule.cpp  NewModule.hpp
module/NewModule/SubModule/: Kconfig  SubModule.cmake  SubModule.cpp  SubModule.hpp
module/NewModule2/: CMakeLists.txt  Kconfig  NewModule.cpp  NewModule.hpp
module/NewModule2/SubModule2/: CMakeLists.txt  Kconfig  SubModule.cpp  SubModule.hpp
platform/: Kconfig  platform.cmake
platform/stm32f103/: f103相关文件,仅作示例
rtos/: Kconfig  rtos.cmake
tools/: Kconfig-anotherway.py  kconfig.py
